Add interface to storage, refactor GORM, add mock for storage, refactor ECHO-framework REST API accordingly
