# cmd/echo/api/api.go
@@ -1,15 +1,15 @@
 package api
 
 import (
-	"fmt"
 	"net/http"
 
 	"github.com/labstack/echo/v4"
 	"github.com/vestlog/nix/pkg/storage"
+	"gorm.io/gorm/logger"
 )
 
 type EchoApi struct {
-	DB *storage.GormDatabase
+	DB storage.Database
 }
 
 // GetAllPosts godoc
@@ -17,13 +17,18 @@ type EchoApi struct {
 // @Produce json
 // @Produce xml
 // @Success 200 {array} object
-// @Router /api/v1/posts [get]
+// @Router /posts [get]
 func (api *EchoApi) GetAllPosts(c echo.Context) error {
-	data, err := api.DB.GetPosts()
+	status := http.StatusOK
+	var data interface{}
+	var err error
+
+	data, err = api.DB.GetPosts()
 	if err != nil {
-		return fmt.Errorf("error getting posts: %w", err)
+		status = http.StatusInternalServerError
+		data = ErrMap(err)
 	}
-	return Encode(c, data)
+	return Encode(c, status, data)
 }
 
 // GetPost godoc
@@ -33,14 +38,21 @@ func (api *EchoApi) GetAllPosts(c echo.Context) error {
 // @Produce xml
 // @Param id path int true "post id"
 // @Success 200 {object} object
-// @Router /api/v1/posts/{id} [get]
+// @Router /posts/{id} [get]
 func (api *EchoApi) GetPost(c echo.Context) error {
 	id := c.Param("id")
+	status := http.StatusOK
+	var data interface{}
+
 	data, err := api.DB.GetPost(id)
 	if err != nil {
-		return fmt.Errorf("error getting post %v: %w", id, err)
+		status = http.StatusInternalServerError
+		if err == logger.ErrRecordNotFound {
+			status = http.StatusNotFound
+		}
+		data = ErrMap(err)
 	}
-	return Encode(c, data)
+	return Encode(c, status, data)
 }
 
 // GetAllComments godoc
@@ -48,13 +60,17 @@ func (api *EchoApi) GetPost(c echo.Context) error {
 // @Produce json
 // @Produce xml
 // @Success 200 {array} object
-// @Router /api/v1/comments [get]
+// @Router /comments [get]
 func (api *EchoApi) GetAllComments(c echo.Context) error {
+	status := http.StatusOK
+	var data interface{}
+
 	data, err := api.DB.GetComments()
 	if err != nil {
-		return fmt.Errorf("error getting posts: %w", err)
+		status = http.StatusInternalServerError
+		data = ErrMap(err)
 	}
-	return Encode(c, data)
+	return Encode(c, status, data)
 }
 
 // GetComment godoc
@@ -64,19 +80,32 @@ func (api *EchoApi) GetAllComments(c echo.Context) error {
 // @Produce xml
 // @Param id path int true "comment id"
 // @Success 200 {object} object
-// @Router /api/v1/comments/{id} [get]
+// @Router /comments/{id} [get]
 func (api *EchoApi) GetComment(c echo.Context) error {
 	id := c.Param("id")
+	status := http.StatusOK
+	var data interface{}
+
 	data, err := api.DB.GetComment(id)
 	if err != nil {
-		return fmt.Errorf("error getting post %v: %w", id, err)
+		status = http.StatusInternalServerError
+		if err == logger.ErrRecordNotFound {
+			status = http.StatusNotFound
+		}
+		data = ErrMap(err)
 	}
-	return Encode(c, data)
+	return Encode(c, status, data)
 }
 
-func Encode(c echo.Context, data interface{}) error {
+func Encode(c echo.Context, status int, data interface{}) error {
 	if c.Request().Header.Get("Accept") == "text/xml" {
-		return c.XMLPretty(http.StatusOK, data, " ")
+		return c.XMLPretty(status, data, " ")
 	}
-	return c.JSONPretty(http.StatusOK, data, " ")
+	return c.JSONPretty(status, data, " ")
+}
+
+func ErrMap(err error) interface{} {
+	return map[string]interface{}{
+		"error": err.Error(),
+	}
 }
